# cctv

./: .gitignore  README.md  rekam.py  setup.cfg  setup.py
lib/: __init__.py  camThread.py  logo.py  rec.py  rekam.py  test.py
