[metadata]
name = mcam
version = 0.0.1
author = Ngupuk
author-email = wafax.4@gmail.com
home-page = https://github.com/ngupuk/mcam
description = Video recorder CLI with multi camera
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any
keywords = Python, video, recorder
classifiers =
    Programming Language :: Python

[options]
zip_safe = false
python_requires = >= 3.5.*
setup_requires =
    setuptools
    wheel
install_requires = 
    pyfiglet
    click

[check]
metadata = true
restructuredtext = false
strict = true

[flake8]
ignore = E111, E501, E722
exclued = book

[yapf]
based_on_style = pep8
indent_width = 2